--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
               <label for="num-colors-gradient">Number of Colors (Linear):</label>
               <input type="number" id="num-colors-gradient" value="2" min="2" />
             </div>
-            <div class="num_input">
+            <!-- <div class="num_input">
               <label for="gradient-angle">Angle:</label>
               <input type="number" id="gradient-angle" value="0" min="0" max="360" />
-            </div>
+            </div> -->
           </div>
 
           <div id="radial-gradient-options" style="display: none">
@@ -58,6 +58,7 @@
       </div>
       <div class="pen-preview"></div>
       <table id="color-table">
+        <div class="message">click code to copy</div>
         <thead>
           <tr>
             <th>Color</th>
